# OReilly_discord_bot

./: .env.sample  .gitignore  README.md  alembic.ini  pyproject.toml
src/: __main__.py  bot.py  conftest.py  lifetime.py  settings.py
src/db/: base.py  utils.py
src/db/migrations/versions/: 2024-03-14-13-12_370cc46bde70.py
src/db/models/: __init__.py
src/events/: __init__.py
src/utils/: state.py
